    <resources>
        <string name="app_name">FoodDeliveryApp</string>
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="offers">Offers for you</string>
        <string name="categories">Categories</string>
        <string name="name">Name</string>
        <string name="description">Description</string>
        <string name="address">Address</string>
        <string name="price_text">$1</string>
        <string name="name_food">Meal Name</string>
        <string name="default_quantity">5</string>
        <string name="shopping_cart">Shopping Cart</string>
        <string name="select_address">SELECT ADDRESS</string>
        <string name="add_address">ADD ADDRESS</string>
        <string name="title">Title</string>
        <string name="select">SELECT</string>
        <string name="addresses">Addresses</string>
        <string name="add_promo_code">Add Promo Code</string>
        <string name="add">add</string>
        <string name="credit">Credit Card</string>
        <string name="debit">Debit Card</string>
        <string name="btc">BTC</string>
        <string name="cash">Cash</string>
        <string name="apple_pay">Apple Pay</string>
        <string name="google_pay">Google Pay</string>
        <string name="payment_title">Choose Payment Method</string>
        <string name="select_payment">SELECT PAYMENT</string>
        <string name="confirm">Confirm order</string>
        <string name="return_home">RETURN TO HOME</string>
        <string name="my_orders">My Orders</string>
        <string name="contact_us">Contact Us</string>
        <string name="rate_us">Rate Us</string>
        <string name="thanks_for_review">Thank you for your feedback!</string>
        <string name="contact_us_text">For more information contact roadtolowpriority@gmail.com for inquiries.</string>
        <string name="cancel">Cancel</string>
        <string name="my_profile">My Profile</string>
        <string name="edit_profile">Edit Profile</string>
        <string name="confirm_changes">confirm changes</string>
        <string name="sign_in_as_guest">Sign In As Guest</string>
        <string name="email">Email</string>
            <string name="phone">Phone #</string>
            <string name="location">Location</string>
            <string name="fav_color">Favorite Color</string>
            <string name="find_foods">find foods</string>
        <string name="register">register</string>
        <string name="login">login</string>
        <string name="application_name">OrderAnyWay</string>
        <string name="sign_in_with_google">Sign in with Google</string>
        <string name="my_favorites">My Favorites</string>
        <string name="update">Update</string>
        <string name="delete">delete</string>
            <string name="confirm_delete">confirm delete</string>
        <string name="enter_message">enter message</string>
        <string name="scan_qr">Scan QR Code</string>
        <string name="order_confirm_notification">Your order has been received by the restaurant and they are preparing your meal</string>
        <string name="loading">loading...</string>
        <string name="pickup_notification">Your order has been picked up by John and he is on the way.</string>
        <string name="card_number">Card Number</string>
        <string name="cvv">CVV</string>
            <string name="expiration_date">Expiration Date</string>
        <string name="pay_with_cash_once_your_delivery_arrives">Pay with cash once your delivery arrives</string>
            <string name="pay">Pay</string>
        <string name="track_order">Track Order</string>
        <string name="order_id">Order Id:</string>
        <string name="order_items">Order Items:</string>
        <string name="view_receipt">View Receipt</string>
        <string name="reorder">Reorder</string>
        <string-array name="country_codes">
            <item>+1</item>
            <item>+86</item>
            <item>+91</item>
            <item>+44</item>
            <item>+1</item>
            <item>+61</item>
        </string-array>
    </resources>