<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="@dimen/_30sp"
        android:textStyle="bold"
        android:textColor="@color/bright_orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/edtName"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName"/>

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"/>

    <EditText
        android:id="@+id/edtLocation"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPhone"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bright_orange"
        android:text="@string/confirm_changes"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>