<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addresses"
        android:textSize="@dimen/_30sp"
        android:textColor="@color/bright_orange"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/edtTitle"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bright_orange"
        android:text="@string/add_address"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/edtAddress"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        app:layout_constraintBottom_toTopOf="@+id/btnAddAddress"/>

</androidx.constraintlayout.widget.ConstraintLayout>