<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopping_cart"
        android:textSize="@dimen/_30sp"
        android:textColor="@color/bright_orange"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPromoCode"/>
    <TextView
        android:id="@+id/txtAddPromoCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_promo_code"
        android:textSize="@dimen/_20sp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPromoCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/txtAddPromoCode"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPromoCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bright_orange"
        android:text="@string/add"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/edtPromoCode"
        app:layout_constraintEnd_toEndOf="@id/edtPromoCode"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bright_orange"
        android:text="@string/select_address"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>