<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/myCard"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_10dp"
    app:cardElevation="@dimen/_10dp"
    android:layout_margin="@dimen/_10dp"
    app:cardBackgroundColor="@color/white"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100dp"
        android:layout_marginEnd="@dimen/_10dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgProduct"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_attach_money_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/name_food"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:layout_marginStart="@dimen/_10dp"
            app:layout_constraintStart_toEndOf="@id/imgProduct"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/price_text"
            android:textSize="@dimen/_25sp"
            android:textStyle="bold"
            android:textColor="@color/bright_orange"
            android:layout_marginStart="@dimen/_10dp"
            app:layout_constraintStart_toEndOf="@id/imgProduct"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnAddQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            android:layout_marginStart="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/default_quantity"
            android:textColor="@color/bright_orange"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btnAddQuantity"
            app:layout_constraintTop_toTopOf="@id/btnAddQuantity"
            app:layout_constraintBottom_toBottomOf="@id/btnAddQuantity"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnRemoveQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_remove_24"
            app:layout_constraintEnd_toStartOf="@id/txtQuantity"
            app:layout_constraintTop_toTopOf="@id/btnAddQuantity"
            app:layout_constraintBottom_toBottomOf="@id/btnAddQuantity"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="@dimen/_5dp"
            android:src="@drawable/ic_baseline_delete_32"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>